Presets ignored by ccmake
The 3.19.0-rc1 release notes state that presets are supported for cmake-gui
and cmake
, but there is no mention of ccmake
. The output of ccmake --help
does, however, list both --presets=
and --list-presets
command line options. I tried using a --presets=
option with ccmake
just now and if that presets file has a JSON error, the configure step fails at the end of the configuration phase but with no error message. If I give it a valid presets file, it gives no error but also doesn't seem to use the preset settings (I was checking whether it sets CMAKE_BUILD_TYPE
from the presets as my verification check). If I give ccmake
the --list-presets
option, it ignores it.
It would seem like ccmake
should honour presets, since cmake-gui
does. If that is the case, then both the release notes and the ccmake
implementation should be updated. The following minimal presets file can be used to verify whether the tool works:
{
"version": 1,
"cmakeMinimumRequired": {
"major": 3,
"minor": 19,
"patch": 0
},
"configurePresets": [
{
"name": "Debug",
"binaryDir": "build",
"generator": "Ninja",
"cacheVariables": {
"CMAKE_BUILD_TYPE": {
"type": "STRING",
"value": "Debug"
}
}
}
]
}