ccmake: Don't list --preset in --help

And show available options in cmake-gui.

Fixes: #21313